Fix web hero spacing

--- a/src/sass/pages/home/_hero.scss
+++ b/src/sass/pages/home/_hero.scss
@@ -25,7 +25,7 @@
     &__video-container {
         grid-column: 1 / -1;
         grid-row: 1 / 2;
-        justify-content: flex-end;
+        justify-content: center;
 
         overflow: hidden;
         z-index: 1;
